--- a/about.html
+++ b/about.html
@@ -12,12 +12,13 @@
     <header>
         <img src="./assets/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
+        <nav>
+            <a href="/index.html">Home</a><span> | </span>
+            <a href="#">About MDHL</a><span> | </span>
+            <a href="./contact.html">Contact</a>
+        </nav>
     </header>
-    <nav>
-        <a href="/index.html">Home</a> |
-        <a href="#">About MDHL</a> |
-        <a href="./contact.html">Contact</a>
-    </nav>
+
     <main>
         <article>
             <figure>
