--- a/contact.html
+++ b/contact.html
@@ -14,18 +14,18 @@
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
-        <a href="./index.html">Home</a> |
-        <a href="./about.html">About MDHL</a> |
+        <a href="./index.html">Home</a><span> | </span>
+        <a href="./about.html">About MDHL</a><span> | </span>
         <a href="#">Contact</a>
     </nav>
     <main>
-        <section>
+        <article>
             <figure>
                 <img src="./assets/hockey_3.jpg" alt="hockey picture" width="300">
             </figure>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br>
                 We reply to your email as soon as we can.</p>
-        </section>
+        </article>
     </main>
 </body>
 
