--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
-        <a href="#">Home</a> | 
-        <a href="./about.html">About MDHL</a> | 
+        <a href="#">Home</a><span> | </span> 
+        <a href="./about.html">About MDHL</a><span> | </span> 
         <a href="./contact.html">Contact</a>
     </nav>
     <main>
