--- a/pages/about.html
+++ b/pages/about.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
+        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="/index.html">Home</a><span> | </span>
@@ -22,7 +22,7 @@
     <main>
         <article>
             <figure>
-                <img src="./assets/hockey_2.jpg" alt="hockey picture" width="300">
+                <img src="./assets/img/hockey_2.jpg" alt="hockey picture" width="300">
             </figure>
             <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
