--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
+        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -21,7 +21,7 @@
     <main>
         <article>
             <figure>
-                <img src="./assets/hockey_3.jpg" alt="hockey picture" width="300">
+                <img src="./assets/img/hockey_3.jpg" alt="hockey picture" width="300">
             </figure>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br>
                 We reply to your email as soon as we can.</p>
