--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
+        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
     </header>
     <nav>
@@ -21,7 +21,7 @@
     <main>
         <article>
             <figure>
-                <img src="./assets/hockey_1.jpg" alt="hockey picture" width="300">
+                <img src="./assets/img/hockey_1.jpg" alt="hockey picture" width="300">
             </figure>
             <h3>Upcoming events</h3>
             <h4>August 4</h4>
