Design 1 of Task 2 completed

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,27 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/style1.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
+        <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
+    <div class="contact-title">
+        <h3>Contact</h3>
+    </div>
     <nav>
-        <a href="./index.html">Home</a><span> | </span>
-        <a href="./about.html">About MDHL</a><span> | </span>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
         <a href="#">Contact</a>
     </nav>
     <main>
-        <article>
-            <figure>
-                <img src="./assets/img/hockey_3.jpg" alt="hockey picture" width="300">
-            </figure>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br>
+        <article class="contact-info">
+            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>
                 We reply to your email as soon as we can.</p>
         </article>
+        <figure class="contact-figure">
+            <img src="../assets/img/hockey_3.jpg" alt="hockey picture" width="300">
+        </figure>
     </main>
 </body>
 
