--- a/pages/about.html
+++ b/pages/about.html
@@ -5,25 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/style1.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="/index.html">Home</a><span> | </span>
-            <a href="#">About MDHL</a><span> | </span>
-            <a href="./contact.html">Contact</a>
-        </nav>
+        <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
+    <div class="about-title">
+        <h3>About MHDL</h3>
+    </div>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="#">About MDHL</a>  
+        <a href="./contact.html">Contact</a>
+    </nav>
 
     <main>
-        <article>
-            <figure>
-                <img src="./assets/img/hockey_2.jpg" alt="hockey picture" width="300">
-            </figure>
+        <article class="about-info">
             <h3>Mision</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in
                 learning and playing soccer, with opportunities to learn and practice skills related to the game of
@@ -38,6 +41,9 @@
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
                 parents and previous league members</p>
         </article>
+        <figure class="about-figure">
+            <img src="../assets/img/hockey_2.jpg" alt="hockey picture" width="300">
+        </figure>
     </main>
 </body>
 
