--- a/pages/index.html
+++ b/pages/index.html
@@ -5,33 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../assets/styles/style1.css">
+    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
         <h1>Mighty Ducks Hockey League</h1>
+        <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
+
+    <div class="home-title">
+        <h3>Upcoming events</h3>    
+    </div>
+
     <nav>
-        <a href="#">Home</a><span> | </span>
-        <a href="./about.html">About MDHL</a><span> | </span>
+        <a href="#">Home</a>
+        <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
     </nav>
+
     <main>
-        <article>
-            <figure>
-                <img src="./assets/img/hockey_1.jpg" alt="hockey picture" width="300">
-            </figure>
-            <h3>Upcoming events</h3>
+        <section class="home-info">
             <h4>August 4</h4>
             <p>MDSL Fundraiser</p>
+
             <h4>August 16</h4>
             <p>Season Kick-off: Meet the Teams</p>
+
             <h4>September 1</h4>
             <p>First Game of the Season (Check Game Schedule for details)</p>
-        </article>
+        </section>
+        <figure class="home-figure">
+            <img src="../assets/img/hockey_1.jpg" alt="hockey picture" width="300">
+        </figure>
     </main>
 </body>
+
 
 </html>
