--- a/pages/about.html
+++ b/pages/about.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style1.css">
-    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style1.css"> -->
+    <link rel="stylesheet" href="../assets/styles/style2.css">
     <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
@@ -21,7 +21,7 @@
     </div>
     <nav>
         <a href="./index.html">Home</a>
-        <a href="#">About MDHL</a>  
+        <a class="active" href="#">About MDHL</a>  
         <a href="./contact.html">Contact</a>
     </nav>
 
