--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style1.css">
-    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style1.css"> -->
+    <link rel="stylesheet" href="../assets/styles/style2.css">
     <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
@@ -22,7 +22,7 @@
     <nav>
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="#">Contact</a>
+        <a class="active" href="#">Contact</a>
     </nav>
     <main>
         <article class="contact-info">
