--- a/pages/index.html
+++ b/pages/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style1.css">
-    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style1.css"> -->
+    <link rel="stylesheet" href="../assets/styles/style2.css">
     <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
     <title>Mighty Ducks Hockey League</title>
 </head>
@@ -22,7 +22,7 @@
     </div>
 
     <nav>
-        <a href="#">Home</a>
+        <a class="active" href="#">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
     </nav>
