Design 2 font modifications

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,10 +25,10 @@
         <a class="active" href="#">Contact</a>
     </nav>
     <main>
-        <article class="contact-info">
+        <div class="contact-info">
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>
                 We reply to your email as soon as we can.</p>
-        </article>
+            </div>
         <figure class="contact-figure">
             <img src="../assets/img/hockey_3.jpg" alt="hockey picture" width="300">
         </figure>
