--- a/pages/about.html
+++ b/pages/about.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../assets/styles/style1.css"> -->
-    <link rel="stylesheet" href="../assets/styles/style2.css">
-    <!-- <link rel="stylesheet" href="../assets/styles/style3.css"> -->
+    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
+    <link rel="stylesheet" href="../assets/styles/style3.css">
+    
     <title>Mighty Ducks Hockey League</title>
 </head>
 
