--- a/pages/contact.html
+++ b/pages/contact.html
@@ -24,6 +24,8 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About MDHL</a>
         <a class="active" href="#">Contact</a>
+        <a href="./game-info.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
     </nav>
     <main>
         <div class="contact-info">
