--- a/pages/index.html
+++ b/pages/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="../assets/styles/style1.css"> -->
-    <!-- <link rel="stylesheet" href="../assets/styles/style2.css"> -->
     <link rel="stylesheet" href="../assets/styles/style3.css">
-    <title>Mighty Ducks Hockey League</title>
+    <title>Mighty Ducks Hockey League</title>   
 </head>
 
 <body>
@@ -26,6 +24,8 @@
         <a class="active" href="#">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
+        <a href="./game-info.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
     </nav>
 
     <main>
