--- a/pages/index.html
+++ b/pages/index.html
@@ -7,41 +7,43 @@
     <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/style3.css">
-    <title>Mighty Ducks Hockey League</title>   
+    <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
+    <nav>
+        <a class="active" href="#">Home</a>
+        <a href="./aboutMDHL.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./game_info.html">Game Information</a>
+        <a href="./rules.html">Rules</a>
+    </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
 
-    <div class="home-title">
-        <h3>Upcoming events</h3>    
+    <div class="titles">
+        <h3>Upcoming Events</h3>
     </div>
 
-    <nav>
-        <a class="active" href="#">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./game-info.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
-    </nav>
-
     <main>
-        <section class="home-info">
-            <h4>August 4</h4>
-            <p>MDSL Fundraiser</p>
+        <div class="home-info">
+            <dl class="event-list">
+                <dt>August 4</dt>
+                <dd>MDSL Fundraiser</dd>
 
-            <h4>August 16</h4>
-            <p>Season Kick-off: Meet the Teams</p>
+                <dt>August 16</dt>
+                <dd>Season Kick-off: Meet the Teams</dd>
 
-            <h4>September 1</h4>
-            <p>First Game of the Season (Check Game Schedule for details)</p>
-        </section>
-        <figure class="home-figure">
-            <img src="../assets/img/hockey_1.jpg" alt="hockey picture" width="300">
-        </figure>
+                <dt>September 1</dt>
+                <dd>First Game of the Season (Check Game Schedule for details)</dd>
+            </dl>
+            <figure class="home-figure">
+                <img src="../assets/img/hockey_1.jpg" alt="hockey picture" width="300">
+            </figure>
+        </div>
+        
     </main>
 </body>
 
