--- a/pages/rules.html
+++ b/pages/rules.html
@@ -6,27 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style.css">
     <link rel="stylesheet" href="../assets/styles/style3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./aboutMDHL.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./game_info.html">Game Information</a>
+        <a href="#">Rules</a>
+    </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
-    <nav>
-        <a href="./index.html">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./game-info.html">Game Information</a>
-        <a href="#">Rules</a>
-    </nav>
+
+    <div class="titles">
+        <h3>Rules Of Play & Policies</h3>
+    </div>
+
     <main>
-        <section>
-            <h3>RULES OF PLAY & POLICIES</h3>
-            <p>IHF rules shall govern MDHL play except as modified herein.</p>
+        <section class="rules-info">
+            <h4>*IHF rules shall govern MDHL play except as modified herein*</h4>
             <dl>
                 <dt>SPORTSMANSHIP</dt>
                 <dd>The common interest that members of the Association share is to inspire
@@ -37,10 +40,10 @@
                 <dt>IHF FIELD REGULATIONS</dt>
                 <dd>
                     <ol>
-                        <li> DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
+                        <li><span>DIMENSIONS.</span> IHF Law 1 provides for flexible external field dimensions within
                             a given maximum and minimum width and length. These dimensions should be
                             adhered to for all fields used by teams under 12 and older.</li>
-                        <li> COMPETITION FIELDS. Fields used within the competition program must be
+                        <li><span>COMPETITION FIELDS.</span>Fields used within the competition program must be
                             a minimum of 100 x 60 yards.Leagues, districts or associations participating in
                             the state competition program that are unable to provide a field that meets these
                             minimum requirements must advise the State Competition Board which will
@@ -48,8 +51,8 @@
                             whether or not a waiver of the minimum dimensions should be granted. Teams
                             from leagues, districts or associations that are unable to provide an acceptable
                             field may be required to play all their games away.</li>
-                        <li>FIELDS USED BY YOUNG AGE GROUPS
-                            <ol>
+                        <li><span>FIELDS USED BY YOUNG AGE GROUPS</span>
+                            <ol class="alpha-list">
                                 <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                                     for older age groups should be progressively larger.</li>
                                 <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
