--- a/pages/game_info.html
+++ b/pages/game_info.html
@@ -6,29 +6,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="icon" href="../assets/img/Logo_Mighty_ducks-01.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/styles/style.css">
     <link rel="stylesheet" href="../assets/styles/style3.css">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
 <body>
+    <nav>
+        <a href="./index.html">Home</a>
+        <a href="./aboutMDHL.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+        <a href="#">Game Information</a>
+        <a href="./rules.html">Rules</a>
+    </nav>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
         <img src="../assets/img/Logo_Mighty_ducks-01.png" alt="team logo" width="150">
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-        <a href="./game-info.html">Game Information</a>
-        <a href="./rules.html">Rules</a>
-    </nav>
+
+    <div class="titles">
+        <h3>Game Information</h3>
+    </div>
+
     <main>
-        <section>
-            <h4>Fall schedule</h4>
-            <p>*All games take place on Saturday</p>
+        <section class="game-info">
+            <h2>Fall Schedule</h2>
             <table>
-                <caption>Fall Schedule</caption>
+                <caption>*All games take place on Saturday</caption>
                 <thead>
                     <tr>
                         <th>SEPTEMBER</th>
@@ -39,7 +42,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td rowspan="2">9/01</td>
+                        <td class="date" rowspan="2">9/01</td>
                         <td>U1 and U4</td>
                         <td>AJ Katzenmaier</td>
                         <td>9:30 a.m.</td>
@@ -50,7 +53,7 @@
                         <td>1:00 p.m.</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">9/08</td>
+                        <td class="date" rowspan="2">9/08</td>
                         <td>U5 and U6</td>
                         <td>Howard A Yeager</td>
                         <td>9:30 a.m.</td>
@@ -61,7 +64,7 @@
                         <td>1:00 p.m.</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">9/15</td>
+                        <td class="date" rowspan="2">9/15</td>
                         <td>U2 and U4</td>
                         <td>North</td>
                         <td>9:30 a.m.</td>
@@ -72,7 +75,7 @@
                         <td>1:00 p.m.</td>
                     </tr>
                     <tr>
-                        <td rowspan="2">9/22</td>
+                        <td class="date" rowspan="2">9/22</td>
                         <td>U1 and U3</td>
                         <td>South</td>
                         <td>9:30 a.m.</td>
@@ -82,20 +85,28 @@
                         <td>Howard A Yeager</td>
                         <td>1:00 p.m.</td>
                     </tr>
+                </tbody>
+                <tfoot>
                     <tr>
-                        <td rowspan="2">9/29</td>
+                        <td><span>9/29</span></td>
                         <td>U4 and U5</td>
                         <td>AJ Katzenmaier</td>
                         <td>9:30 a.m.</td>
                     </tr>
-                </tbody>
+                </tfoot>
             </table>
-            <p>Facility type: Outdoor</p>
-            <p>Aditional Information: If deemed necessary by MDHL games
-                may be shortened or cancelled due to extreme weather conditions</p>
-            <p>Please direct all questions to: Michael Randall, League Coordinator</p>
-            <p>Phone:(630)690-8132</p>
-            <p>Email:michael.randall@chihockey.org</p>
+            <div class="additional-info">
+                <p><span>Facility type:</span> Outdoor</p>
+                <p><span>Aditional Information:</span> If deemed necessary by MDHL games
+                    may be shortened or cancelled due to extreme weather conditions</p>
+                <p><span>Please direct all questions to:</span> Michael Randall, League Coordinator</p>
+                <div class="contact-randall">
+                    <p><span>Phone:</span><a href="tel:6306908132">(630)690-8132</a></p>
+                    <p><span>Email:</span><a
+                            href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a>
+                    </p>
+                </div>
+            </div>
         </section>
     </main>
 
